--- a/index.htm
+++ b/index.htm
@@ -6,7 +6,7 @@
   <body>
     <object
       type="application/x-shockwave-flash"
-      data="http://github.com/Fengtan/fingergeek/raw/master/fingergeek.swf"
+      data="fingergeek.swf"
       width="550"
       height="400"
     /> 
